Updated for model populate based on selection.

--- a/mysite/ui.apps/src/main/content/jcr_root/apps/mysite/components/carmodels/carmodels.html
+++ b/mysite/ui.apps/src/main/content/jcr_root/apps/mysite/components/carmodels/carmodels.html
@@ -4,8 +4,8 @@
 </select>
 <label for="model">${properties.modelTitle}</label>
 <select name="model" id="model" class="custom-select" disabled>
-  <option value="makeaselection">Make a selection</option>
+  <option value="selectone">Select One</option>
 </select>
-<p id="cardatadisplay"></p>
+<p id="cardatadisplay" class="car-para-font-style"></p>
 <input type="hidden" id="carDataPath" name="carDataPath" value="${properties.carDataJsonPath}">
 <input type="hidden" id="selectedDataValue" name="selectedDataValue" value="${properties.selectedDataValue}">
